# promguard

./: .dockerignore  .gitattributes  .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Containerfile  Makefile  README.md  flake.nix  release-please-config.json
.github/workflows/: build.yaml  ci.yaml  publish-helm.yaml  release.yaml
charts/promguard-helm/: CHANGELOG.md  Chart.yaml  values.yaml
charts/promguard-helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  podmonitor.yaml
compose/: compose.yaml  prometheus.yaml  promguard.dashboard.json  promguard.jsonnet
compose/dashboards/: dashboards.yaml
src/: config.rs  main.rs  metrics.rs  promguard-config.yaml  tsdb.rs
