[package]
name = "promguard"
version = "0.2.4"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
clap = { version = "4.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
prometheus-client = "0.22.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
serde_json = "1.0.128"
